dpkg (1.18.23) UNRELEASED; urgency=medium

  * Handle unmatched arch-qualified virtual packages in dpkg-genbuildinfo,
    instead of letting perl die. Closes: #849944
  * Declare .buildinfo format as stable with version 1.0.
  * Portability:
    - Do not redeclare sys_siglist in libcompat when the system does so.
      Thanks to Thomas Klausner <wiz@NetBSD.org>.
  * Perl modules:
    - Do not special case EM_SPARC32PLUS for NetBSD in Dpkg::Shlibs::Objdump,
      the code has been fixed in NetBSD as that situation could not happen.
    - Fix read() error handling in Dpkg::Shlibs::Objdump::get_format() to
      gracefully ignore non-ELF files again. Closes: #854536
    - Emit an explicit warning from Dpkg::Shlibs::Objdump::Object::analyze()
      for unknown executable formats instead of relying on objdump doing so.
    - Do not parse bogus ELF binaries in Dpkg::Shlibs::Objdump::get_format().
      Reported by Niels Thykier <niels@thykier.net>.
    - Add ‘.mnt-ignore’ to the default ignore lists in Dpkg::Source::Package,
      as we were already ignoring the ‘_MTN’ pathnames. Closes: #855450
      Thanks to Nicolas Boulenguez <nicolas@debian.org>.
    - Mark kfreebsd-amd64, kfreebsd-i386, sparc and sparc64 architectures as
      having gcc builtin PIE in Dpkg::Vendor::Debian.
    - Switch PIE handling in Dpkg::Vendor::Debian to have no default (!) and
      delegate the setting to gcc or an explicit request by a user. This is
      needed to cope with the general PIE brokenness situation in Debian, and
      the current specific brokenness of a Debian gcc patch mangling the dpkg
      build flags. Closes: #848129, #845550
  * Documentation:
    - Clarify the requirements for deb-conffile(5) pathnames. Closes: #854417
      Proposed by Dieter Adriaenssens <dieter.adriaenssens@gmail.com>.
    - Document dpkg-source --before-build and --after-build in --help output.
    - Document dpkg-buildpackage --ignore-builtin-builddeps in --help output.
  * Build system: